--- a/helium-webapp/src/main/webapp/css/bootstrap-helium.css
+++ b/helium-webapp/src/main/webapp/css/bootstrap-helium.css
@@ -507,3 +507,9 @@ width: 62%;
 	z-index:10;
 }
 *+html .dropdown-menu { z-index:100;}
+	
+form input[type='number']::-webkit-outer-spin-button,
+form input[type='number']::-webkit-inner-spin-button {
+   -webkit-appearance: none;
+   margin: 0;
+}
