--- a/helium-selenium-integraciones/.settings/org.eclipse.wst.common.component
+++ b/helium-selenium-integraciones/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="helium-selenium-integraciones">
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+    <wb-module deploy-name="pru">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="helium-selenium-integraciones"/>
-        <property name="java-output-path" value="/helium-selenium-integraciones/build/classes"/>
+        <property name="context-root" value="pru"/>
+        <property name="java-output-path" value="/pru/build/classes"/>
     </wb-module>
 </project-modules>
