MID: 671. MSG: No muestra el calendario de parámetros de tipo fecha en la generación de informes de consultas por tipo
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1187 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/common.css
+++ b/helium-webapp/src/main/webapp/css/common.css
@@ -447,3 +447,7 @@ p.aclaracio {
 .ui-timepicker-rtl{ direction: rtl; }
 .ui-timepicker-rtl dl { text-align: right; }
 .ui-timepicker-rtl dl dd { margin: 0 65px 10px 10px; }
+
+#ui-datepicker-div {
+	z-index: 2000;
+}
