MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1325 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/.settings/org.eclipse.wst.common.component
+++ b/helium-webapp/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="helium-webapp-3.0">
         <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/target/replace-dir/WEB-INF/web.xml"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
