--- a/helium-webapp/src/main/webapp/css/DT_bootstrap.css
+++ b/helium-webapp/src/main/webapp/css/DT_bootstrap.css
@@ -1,7 +1,7 @@
 
 div.dataTables_length div {
-	float: right;
-	margin-bottom: 6px;
+	float: left;
+	margin: 4px 0 6px 0;
 }
 
 div.dataTables_length select {
@@ -13,7 +13,7 @@ div.dataTables_filter label {
 }
 
 div.dataTables_info {
-	padding-top: 8px;
+	padding: 8px 0 8px 0;
 }
 
 div.dataTables_paginate {
@@ -31,15 +31,6 @@ table.table {
 	max-width: none !important;
 }
 
-table.table thead .sorting,
-table.table thead .sorting_asc,
-table.table thead .sorting_desc,
-table.table thead .sorting_asc_disabled,
-table.table thead .sorting_desc_disabled {
-	cursor: pointer;
-	*cursor: hand;
-}
-
 table.table thead .sorting { background: url('../img/sort_both.png') no-repeat center right; }
 table.table thead .sorting_asc { background: url('../img/sort_asc.png') no-repeat center right; }
 table.table thead .sorting_desc { background: url('../img/sort_desc.png') no-repeat center right; }
@@ -47,6 +38,15 @@ table.table thead .sorting_desc { background: url('../img/sort_desc.png') no-rep
 table.table thead .sorting_asc_disabled { background: url('../img/sort_asc_disabled.png') no-repeat center right; }
 table.table thead .sorting_desc_disabled { background: url('../img/sort_desc_disabled.png') no-repeat center right; }
 
+table.table thead .sorting,
+table.table thead .sorting_asc,
+table.table thead .sorting_desc,
+table.table thead .sorting_asc_disabled,
+table.table thead .sorting_desc_disabled {
+	cursor: pointer;
+	*cursor: hand;
+	background-position: 98% 50%;
+}
 
 table.dataTable th:active {
 	outline: none;
