MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1336 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -66,3 +66,9 @@
     opacity: 0.2;
     text-shadow: 0 1px 0 #FFFFFF;
 }
+
+.modal-dialog.modal-maximize {
+	width: 98%;
+	top: 1%;
+	margin: auto;
+}
