MID: 528 MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1349 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -1,3 +1,9 @@
+body {
+	background-image:url(../img/background-pattern.jpg);
+	color:#666666;
+	padding-top: 120px;
+}
+
 .navbar-app {
 	background-color: #ff9523;
 	height: 100px;
