MID: 528. MSG: Merge de la branca 2.6 MID: 708. MSG: Error en eliminar domini de quan té un camp associat MID: 707. MSG: Error en retrotraure l'expedient MID: 706. MSG: Error a la columna "expedient" en el llistat d'expedients.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1425 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -56,16 +56,16 @@
 	margin-top: 4px !important;
 }
 
-#contingut-alertes .alert {
+.alert {
 	padding: 10px 15px !important;
 }
-#contingut-alertes button.close-alertes {
+button.close-alertes {
     background: none repeat scroll 0 0 transparent;
     border: 0 none;
     cursor: pointer;
     padding: 0;
 }
-#contingut-alertes .close-alertes {
+.close-alertes {
     color: #000000;
     float: right;
     font-weight: bold;
@@ -85,10 +85,19 @@ p.help-block {
 	margin-top: 4px !important;
 }
 
+.obligatori {
+  	background-image: url("../img/asterisk.png");
+  	background-repeat: no-repeat;
+  	background-position: right 12px;
+  	font-weight: bold !important;
+}
 /* MODALS */
 /*********************************************/
 .modal-dialog.modal-maximize {
 	width: 98%;
 	top: 1%;
 	margin: auto;
+}
+.modal-footer .outcomes {
+	margin-left: 5px;
 }
