MID: 725 MSG: Buidat de la taula de logs
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1453 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/common.css
+++ b/helium-webapp/src/main/webapp/css/common.css
@@ -335,6 +335,12 @@ h3.titol-reindexar {
 	background-repeat: no-repeat;
 	background-position: 2px 6px;
 }
+h3.titol-buidarlog {
+	padding-left: 24px;
+	background-image: url(../img/clear.png);
+	background-repeat: no-repeat;
+	background-position: 2px 6px;
+}
 h3.titol-documents-tasca {
 	padding-left: 24px;
 	background-image: url(../img/page_white_stack.png);
