MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1492 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -153,3 +153,28 @@ p.help-block {
 .dropdown-menu {
 	overflow: auto;
 }
+
+.btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open > .dropdown-toggle.btn-default {
+	background-color: #d3d3d3 !important;
+	color: #000;
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.125) inset;
+    outline: 0 none;
+}
+
+.btn:active, .btn.active {
+/*     box-shadow: none; */
+}
+.tooltip-inner {
+/* 	background-color: #428bca !important; */
+}
+.tooltip-arrow {
+/* 	display: none; */
+}
+
+.tooltip-inner {  
+  background-color: #fff;
+	color: #333 !important;
+	border-color: #333;
+	border-width: 1px;
+	border-style: solid;
+}
