MID: 528. MSG: Merge de la branca 2.6
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1512 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/tascaForm.css
+++ b/helium-webapp/src/main/webapp/css/tascaForm.css
@@ -186,6 +186,7 @@ div.tab-content {
 /* 			border: solid 0px; */
 /* 			padding-right: 0px; */
 /* 		} */
+.well.well-small {margin: 20px;}
 .registre th {
 	border-bottom: solid 1px #CACACA !important;
 	background: rgba(221,221,221,1);
