--- a/helium-webapp/src/main/webapp/css/tascaForm.css
+++ b/helium-webapp/src/main/webapp/css/tascaForm.css
@@ -187,6 +187,7 @@ div.tab-content {
 /* 			padding-right: 0px; */
 /* 		} */
 .well.well-small {margin: 20px;}
+.registre_taula {overflow: auto;}
 .registre th {
 	border-bottom: solid 1px #CACACA !important;
 	background: rgba(221,221,221,1);
@@ -197,6 +198,10 @@ div.tab-content {
 	background: -ms-linear-gradient(top, rgba(221,221,221,1) 0%, rgba(245,245,245,1) 100%);
 	background: linear-gradient(to bottom, rgba(221,221,221,1) 0%, rgba(245,245,245,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dddddd', endColorstr='#f5f5f5', GradientType=0 );
+	min-width: 160px;
+}
+.registre th.colEliminarFila{
+	min-width: 1px;
 }
 .contingut-carregant {
 	padding-top: 50px;
