--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -155,10 +155,14 @@ p.help-block {
 }
 
 .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open > .dropdown-toggle.btn-default {
-	background-color: #d3d3d3 !important;
+	background-color: #d3d3d3;
 	color: #000;
 	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.125) inset;
     outline: 0 none;
+}
+
+form .btn-group > .btn-default:hover:HOVER {
+	background-color: #a0a0a0;
 }
 
 .btn:active, .btn.active {
