MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1564 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/tascaForm.css
+++ b/helium-webapp/src/main/webapp/css/tascaForm.css
@@ -109,7 +109,7 @@ div.tab-content {
 }
 .multiple input, .multiple textarea, .multiple_camp .input-group, .multiple_camp .inputcheck {
 	float: left;
-	width: calc(100% - 29px) !important;
+	width: calc(100% - 29px);
 }
 .multiple_camp div.suggest, .multiple_camp div.seleccio {
 	float: left;
