MID: 0000729 MSG: Expedients han avançat després d'un error en l'enviament a portafirmes.
MID: 0000728
MSG: Error amb entorn seleccionat i filtre en sessió

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1754 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -95,6 +95,12 @@ p.help-block {
   	background-position: right 12px;
   	font-weight: bold !important;
 }
+.filtrat {
+	border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+}
 /* MODALS */
 /*********************************************/
 .modal-dialog.modal-maximize {
