MID: 0000757 MSG: Botons parcialment ocults al modificar una variable
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1806 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -103,6 +103,9 @@ p.help-block {
 }
 /* MODALS */
 /*********************************************/
+.modal-body {
+	overflow: auto;
+}
 .modal-dialog.modal-maximize {
 	width: 98%;
 	top: 1%;
