MID: 0000755 MSG: Millora en les mètriques de l'aplicació
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1822 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/.settings/org.eclipse.wst.common.component
+++ b/helium-webapp/.settings/org.eclipse.wst.common.component
@@ -11,7 +11,13 @@
         <dependent-module archiveName="helium-util-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/helium-util/helium-util">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="helium-jbpm3-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/helium-jbpm3/helium-jbpm3">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="helium-core-api-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/helium-core-api/helium-core-api">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="helium-disseny-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/helium-disseny/helium-disseny">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="helium-core-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/helium-core/helium-core">
@@ -29,13 +35,7 @@
         <dependent-module archiveName="helium-plugin-impl-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/helium-plugin-impl/helium-plugin-impl">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="helium-hibernate-entitymanager-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/helium-ear/target/helium-ear-3.0/lib/helium-hibernate-entitymanager-3.0.jar">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="helium-disseny-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/helium-disseny/target/helium-disseny-3.0.jar">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="helium-jbpm3-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/helium-jbpm3/target/helium-jbpm3-3.0.jar">
+        <dependent-module archiveName="helium-hibernate-entitymanager-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/helium-hibernate-entitymanager/helium-hibernate-entitymanager">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/helium-webapp/target/classes"/>
