77: Merge dels canvis de la branca 3.0. (MID:0000717)
Task-Url: http://github.com/GovernIB/helium/issues/issue/77

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -191,3 +191,8 @@ form .btn-group > .btn-default:hover:HOVER {
 	border-width: 1px;
 	border-style: solid;
 }
+
+.table-bordered>tbody>tr>td {
+	overflow-wrap: break-word; 
+	max-width: 100px;
+}
