826: Redefinició de permisos de l'aplicació
Task-Url: http://github.com/GovernIB/helium/issues/issue/826

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -196,3 +196,9 @@ form .btn-group > .btn-default:hover:HOVER {
 	overflow-wrap: break-word; 
 	max-width: 120px;
 }
+
+.botons-titol {
+	position: relative;
+	top: -60px;
+	height: 0px;
+}
