--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -193,6 +193,7 @@ form .btn-group > .btn-default:hover:HOVER {
 }
 
 .table-bordered>tbody>tr>td {
-	overflow-wrap: break-word; 
+	overflow-wrap: break-word;
+	word-wrap: break-word; 
 	max-width: 120px;
 }
