# WARNING: head commit changed in the meantime
820: Simplificació de la configuració en les definicions de procés 

Task-Url: http://github.com/GovernIB/helium/issues/issue/820

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -196,3 +196,12 @@ form .btn-group > .btn-default:hover:HOVER {
 	overflow-wrap: break-word; 
 	max-width: 120px;
 }
+.fright {
+	float: right;
+}
+.botons.fright {
+	padding-left: 10px;
+}
+.botons.fright a {
+	padding: 4px 12px;
+}
