--- a/helium-webapp/.settings/org.eclipse.wst.common.component
+++ b/helium-webapp/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="helium-webapp-3.1">
+    <wb-module deploy-name="helium">
         <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/target/replace-dir/WEB-INF/web.xml"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
