821: Manteniment de tipus d'expedient (Manteniment de Enumerats)
Task-Url: http://github.com/GovernIB/helium/issues/issue/821

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -197,3 +197,7 @@ form .btn-group > .btn-default:hover:HOVER {
 	word-wrap: break-word; 
 	max-width: 120px;
 }
+
+.botons-titol {
+	margin-bottom: 10px;
+}
