821: Manteniment de tipus d'expedient
Task-Url: http://github.com/GovernIB/helium/issues/issue/821

Mantniment de valors de enumerats.

--- a/helium-webapp/.settings/org.eclipse.wst.common.component
+++ b/helium-webapp/.settings/org.eclipse.wst.common.component
@@ -35,8 +35,11 @@
         <dependent-module archiveName="helium-plugin-impl-3.2.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/helium-plugin-impl/helium-plugin-impl">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="helium-hibernate-entitymanager-3.2.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/helium-hibernate-entitymanager/helium-hibernate-entitymanager">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/helium-webapp/target/classes"/>
         <property name="context-root" value="helium"/>
-        <property name="component.exclusion.patterns" value="META-INF/context.xml,WEB-INF/classes/META-INF/resources/**"/>
+        <property name="component.exclusion.patterns" value="META-INF/context.xml,WEB-INF/classes/log4j.xml,WEB-INF/classes/META-INF/resources/**"/>
     </wb-module>
 </project-modules>
