820: Simplificació de la configuració en les definicions de procés
Task-Url: http://github.com/GovernIB/helium/issues/820

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -205,3 +205,7 @@ form .btn-group > .btn-default:hover:HOVER {
 .botons.fright a {
 	padding: 4px 12px;
 }
+.comment {
+	font-size: 12px;
+	color: #999;
+}
