#930: Distribució de camps formularis
Task-Url: https://github.com/GovernIB/helium/issues/issue/930

NOVA RELEASE: 3.2.1

--- a/helium-webapp/src/main/webapp/css/tascaForm.css
+++ b/helium-webapp/src/main/webapp/css/tascaForm.css
@@ -30,7 +30,7 @@ th label {
 	width: 100%;
 }
 .input-group-multiple {
-	padding-left: 15px;
+	padding-left: 0px;
 	padding-right: 0px;}
 .form-group li > .select2-container {
 	width: 100%;
@@ -216,4 +216,8 @@ div.tab-content {
 }
 .ui-dialog { 
 	z-index: 1400 !important ;
+}
+.like-cols {
+	 float: left;
+	 padding-left: 16px;	
 }
