#1043: Herència de tipus d’expedient
Task-Url: https://github.com/GovernIB/helium/issues/1043

Guardo el codi fins al moment abans d'arreglar els mètodes per recuperar
definicions de procés tenint en compte la herència i que es poden tenir
definicions d'expedient en tipus d'expedients diferents.

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -215,3 +215,12 @@ form .btn-group > .btn-default:hover:HOVER {
 	color: #999;
 	margin-bottom: 0px;
 }
+
+/* Per posar l'span de l'herència a la dreta flotant.*/
+span.herencia { 
+	float: right; 
+}
+.select2-chosen > span.herencia {
+    top: -16px;
+    position: relative;
+}
