--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -3,8 +3,8 @@
 #govern-logo {
 	border-right: 1px solid #FFFFFF;
 	display: block;
-	margin-top: 11px;
-	padding: 5px 24px 12px 0;
+	margin-top: -15px;
+	padding: 0px 24px 12px 0;
 }
 #app-logo {
 	display: block;
@@ -40,8 +40,9 @@
 /* CONTINGUT */
 /*********************************************/
 .container-v3 {
-	width: 90% !important;
-	min-width: 1000px;
+	width: 100% !important;
+	padding-right: 50px !important;
+	padding-left: 50px !important;
 }
 
 .container-main, .container-foot {
