#1437 Afegir informació per cada permís en la gestió de permisos
Task-url: https://github.com/GovernIB/helium/issues/1437

--- a/helium-webapp/src/main/webapp/css/estils-v3.css
+++ b/helium-webapp/src/main/webapp/css/estils-v3.css
@@ -303,3 +303,10 @@ span.herencia {
     top: -16px;
     position: relative;
 }
+
+.checkbox_hiddenInfo {
+  visibility: hidden;
+}
+.inputCheckbox:hover .checkbox_hiddenInfo {
+  visibility: visible;
+}
