#1531 Helium MS. Fase 1 - Integrar aplicació Helium amb Helium-jbpm

--- a/helium-controller/src/main/resources/static/css/displaytag.css
+++ b/helium-controller/src/main/resources/static/css/displaytag.css
@@ -1,5 +1,5 @@
 table.displaytag td.showDragHandle {
-    background-image: url(/helium/img/updown.png);
+    background-image: url(/heliumback/img/updown.png);
     background-repeat: no-repeat;
     background-position: left 3px; 
     cursor: move;
