#1541 Helium MS. Fase 1 - Integrar Helium amb MS Dades

--- a/helium-controller/src/main/resources/static/css/estils-v3.css
+++ b/helium-controller/src/main/resources/static/css/estils-v3.css
@@ -310,3 +310,14 @@ span.herencia {
 .inputCheckbox:hover .checkbox_hiddenInfo {
   visibility: visible;
 }
+
+@media (min-width: 1200px) {
+	.modal-lg {
+		width: 1100px;
+	}
+}
+@media (min-width: 1600px) {
+	.modal-lg {
+		width: 1500px;
+	}
+}
