#1857 Poder mostrar la traça de les excepcions que es capturin a Helium

--- a/helium-webapp/src/main/webapp/css/common.css
+++ b/helium-webapp/src/main/webapp/css/common.css
@@ -463,3 +463,14 @@ p.aclaracio {
 #ui-datepicker-div {
 	z-index: 2000;
 }
+
+.trace h3 {
+    background: none repeat scroll 0 0 #FFFFFF;
+    border-color: #EBCCD1;
+    color: #A94442;
+}
+
+.trace .ui-widget-content {
+    border-color: #EBCCD1;
+    color: #A94442;
+}
